[package]
name = "rust_docker"
version = "0.1.1"
description = "A docker wrapper to interact with docker daemon."
license = "MIT"
authors = ["Deepesh Pathak <deepshpathak@gmail.com>"]
repository = "https://github.com/fristonio/docker.rs.git"
documentation = "https://docs.rs/rust_docker"
readme = "README.md"
keywords = ["docker", "api", "unix-sockets"]

[dependencies]
quick-error = "1.2.2"
serde_derive = "1.0.66"
serde = "1.0.66"
serde_json = "1.0.21"
tar = "0.4.16"
flate2 = "1.0.2"
uuid = { version = "0.7", features = ["v4"] }
